# DivSuite

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  config.yaml  config_parser.py  environment.yml  main.py  main_test.py  pyproject.toml  run_experiments.sh  setup.sh  utils.py
algorithms/: base.py  bswap.py  clt.py  mmr.py  motley.py  msd.py  swap.py  sy.py
configs/: config_mmr.yaml  config_samples.yaml
embedders/: base_embedder.py  hf_embedder.py  ste_embedder.py
src/config/: config_parser.py
src/core/: pipeline.py
src/core/algorithms/: base.py  bswap.py  clt.py  gmc.py  gne.py  mmr.py  motley.py  msd.py  swap.py  sy.py
src/core/embedders/: base_embedder.py  gemini_embedder.py  hf_embedder.py  ste_embedder.py
src/data/: category_utils.py  data_loader.py  data_utils.py
src/metrics/: metrics_handler.py  metrics_utils.py
src/utils/: algorithm_registry.py  experiment_utils.py  logger.py  utils.py
src/visualization/: visualization.py
