[project]
name = "DivSuite"
version = "0.1.0"
description = "DivSuite is a framework that gathers state-of-the-art diversification algorithms in a single place."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "peft>=0.15.2",
    "pre-commit>=4.2.0",
    "scienceplots>=2.1.1",
    "scikit-learn>=1.6.1",
    "sentence-transformers==4.1.0",
    "transformers>=4.51.2",
]
